--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <div class="swiper-wrapper">
                 <article class="card-article swiper-slide">
                     <div class="card-image">
-                        <img src="./Assets/Avatar-1.png" alt="Image" class="card-img">
+                        <img src="./Assets/Avatar-1.PNG" alt="Image" class="card-img">
                         <div class="card-shadow"></div>
                     </div>
                     <div class="card-data">
@@ -31,7 +31,7 @@
 
                 <article class="card-article swiper-slide">
                     <div class="card-image">
-                        <img src="./Assets/Avatar-2.png" alt="Image" class="card-img">
+                        <img src="./Assets/Avatar-2.PNG" alt="Image" class="card-img">
                         <div class="card-shadow"></div>
                     </div>
                     <div class="card-data">
@@ -45,7 +45,7 @@
 
                 <article class="card-article swiper-slide">
                     <div class="card-image">
-                        <img src="./Assets/Avatar-3.png" alt="Image" class="card-img">
+                        <img src="./Assets/Avatar-3.PNG" alt="Image" class="card-img">
                         <div class="card-shadow"></div>
                     </div>
                     <div class="card-data">
@@ -59,7 +59,7 @@
 
                 <article class="card-article swiper-slide">
                     <div class="card-image">
-                        <img src="./Assets/Avatar-4.png" alt="Image" class="card-img">
+                        <img src="./Assets/Avatar-4.PNG" alt="Image" class="card-img">
                         <div class="card-shadow"></div>
                     </div>
                     <div class="card-data">
@@ -73,7 +73,7 @@
 
                 <article class="card-article swiper-slide">
                     <div class="card-image">
-                        <img src="/Assets/Avatar-5.png" alt="Image" class="card-img">
+                        <img src="/Assets/Avatar-5.PNG" alt="Image" class="card-img">
                         <div class="card-shadow"></div>
                     </div>
                     <div class="card-data">
