--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
                 <article class="card-article swiper-slide">
                     <div class="card-image">
-                        <img src="/Assets/Avatar-5.PNG" alt="Image" class="card-img">
+                        <img src="./Assets/Avatar-5.PNG" alt="Image" class="card-img">
                         <div class="card-shadow"></div>
                     </div>
                     <div class="card-data">
